Move highlight to right side instead of left to avoid the shiftiness in the checkboxes.

--- a/app/assets/stylesheets/cypress/_buttons.scss
+++ b/app/assets/stylesheets/cypress/_buttons.scss
@@ -74,7 +74,7 @@
 
   &.active,
   &:active {
-    border-left: 8px solid $brand-primary;
+    border-right: 8px solid $brand-primary;
     background-color: $body-bg;
     color: $gray-darker;
   }
